--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
 		
 		<div class="contact-me">
 			<h2>Get In Touch</h2>
-			<h3>Lorem ipsum dolor sit amet, non elit.</h3>
-			<p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+			<h3> For flutter Projects </h3>
+			<p>Hit me up</p> 
 			<a class="btn" href="mailto:aman.sri252@gmail.com">CONTACT ME</a>
 		</div>
 	</div>
 
 
 	<div class="bottom-container">
-		<a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-		<a class="footer-link" href="https://twitter.com/">Twitter</a>
-		<a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+		<a class="footer-link" href="https://www.linkedin.com/in/aman-kumar-srivastava-0392961a7/">LinkedIn</a>
+		<a class="footer-link" href="https://twitter.com/Amankum76845198">Twitter</a>
 		<p class="copy">© 2020 Aman Kumar.</p>
 	</div>
 </body>
